# blz3

./: .gitignore  Blizzard III.dsw  Blizzard III.opt  Blizzard III.sln  Blizzard III.tpr  Blizzard.pro  Doxyfile  Doxyfile.in  Jenkinsfile  LICENSE.md  Makefile  README.md  ReleaseNotes.md  Releasenotes.md  Releasenotes.txt  blz3.spec  configure  configure.ac  control  control-blz3  control-blz3-dev  control-blz3.in  control-libblz3-dev  control-libblz3-dev.in  default.dfPackage  msvc.reg
.github/workflows/: ubuntu-classic.yml  ubuntu-qt5.yml  ubuntu-qt6.yml
Installer/Lines III/: Lines III.vdproj
WWW/: Lines.html  dlg_material_carpaint.html  dlg_material_chess.html  dlg_material_cook_torrance.html  dlg_material_granite.html  dlg_material_marble.html  dlg_material_newton_rings.html  dlg_material_normal.html  dlg_material_plank.html  dlg_material_slide.html  dlg_material_texture.html  dlg_material_wood.html  dlg_material_wraptexture.html  effects.html  format.css  index.html  material.html  print.css  screen.css  shape.html
cd/: autorun_icon.inf
data/: AllShapes.bwd  Animationstest.bwd  Bump.bwd  BumpMapping.bwd  Condition.bwd  InstallIcon.bwd  Lichttest.bwd  Material.bwd  Objektsymbol.bwd  Shader_Mork.bwd  Shader_Mork2.bwd  Shader_Phong.bwd  Shapes.bwd  WinIcon.bwd
docker/: Dockerfile  docker-build.sh  docker-run.sh
dot/: bump.dot  list.dot  material.dot  shape.dot  types.dot
include/: blz3_glext.h  jconfig.h  jerror.h  jmorecfg.h  jpegint.h  jpeglib.h  os.h  tif_config.h  tif_dir.h  tif_fax3.h  tiff.h  tiffcomp.h  tiffconf.h  tiffio.h  tiffiop.h
include/blz3/: b3Types.h  glext.h
include_unix/: port.h
include_unix/blz3/: autoconf.h.in  b3Config.h  b3PluginDef.h
include_win32/: StdAfx.h  version.h
include_win32/blz3/: b3Config.h  b3Main.h  b3PluginDef.h
lib/: linux
src/: Blizzard.pro  Makefile.in  common.pri  flags.pri.in  icc.make  icc.make.in  makefile  makefile.templ  src.pro
src/AppLines/: AppLines.aps  AppLines.clw  AppLines.cpp  AppLines.dsp  AppLines.h  AppLines.odl  AppLines.rc  AppLines.reg  AppLines.vcproj  AppLinesDoc.cpp  AppLinesDoc.h  AppLinesInclude.cpp  AppLinesInclude.h  AppLinesView.cpp  AppLinesView.h  AppObject.odl  AppObjectDoc.cpp  AppObjectDoc.h  AppObjectView.cpp  AppObjectView.h  AppRaytraceDoc.cpp  AppRaytraceDoc.h  AppRaytraceView.cpp  AppRaytraceView.h  AppRenderDoc.cpp  AppRenderDoc.h  AppRenderView.cpp  AppRenderView.h  ChildFrm.cpp  ChildFrm.h  DlgAction.cpp  DlgAction.h  DlgAnimation.cpp  DlgAnimation.h  DlgBumpGlossy.cpp  DlgBumpGlossy.h  DlgBumpGroove.cpp  DlgBumpGroove.h  DlgBumpMarble.cpp  DlgBumpMarble.h  (+239 more)
src/Bavi/: Makefile.in  avilib.c
src/Bjpeg/: LibJPEG.dsp  LibJPEG.vcproj  Makefile.in  makefile
src/Btiff/: BlizTIFF.dsp  LibTIFF.dsp  LibTIFF.vcproj  Makefile.in  makefile  mkg3states.c  t4.h  tif_aux.c  tif_color.c  tif_compress.c  tif_dir.c  tif_dir.h  tif_dirinfo.c  tif_dirread.c  tif_dirwrite.c  tif_fax3.c  tif_getimage.c  tif_jpeg.c  tif_luv.c  tif_lzw.c  tif_next.c  tif_ojpeg.c  tif_open.c  tif_packbits.c  tif_pixarlog.c  tif_predict.c  tif_print.c  tif_read.c  tif_strip.c  tif_swab.c  tif_thunder.c  tif_tile.c  tif_unix.c  tif_win32.c  tif_write.c  tif_zip.c
src/OpenGL/: .cproject  .project  Makefile.in  MouseSelect.ysc  README.md  b3AbstractItem.h  b3BBoxItem.cpp  b3BBoxItem.h  b3CameraItem.cpp  b3CameraItem.h  b3CameraVolume.cpp  b3CameraVolume.h  b3LightItem.cpp  b3LightItem.h  b3OpenGLScrollArea.cpp  b3OpenGLScrollArea.h  b3OpenGLWidget.cpp  b3OpenGLWidget.h  b3SceneItem.cpp  b3SceneItem.h  build.xml  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  makefile  matrix_test.cc  ocean.cc  point.h  qrender-sct.pro  qrender.cpp  qrender.pro  qrender.sgen  render.cc  render.pro  simple.cc
src/base/: LibBase.dsp  LibBase.vcproj  Makefile.in  b3Aux.cc  b3BaseInclude.cc  b3BaseInclude.h  b3Clouds.cc  b3Color.cc  b3Cubic.cc  b3Display.cc  b3Endian.cc  b3Exception.cc  b3FFT.cc  b3FileList.cc  b3FileMem.cc  b3Filter.cc  b3Item.cc  b3ItemRegister.cc  b3ItemRegister.h  b3ItemRegisterEntry.cc  b3Math.cc  b3Matrix.cc  b3MultiSample.cc  b3Node.cc  b3OceanWave.cc  b3Pick.cc  b3Polynom.cc  b3Procedure.cc  b3Render.cc  b3RenderContext.cc  b3Row.cc  b3SearchPath.cc  b3Spline.cc  b3UndoOperation.cc  b3VectorBufferObjects.cc  b3VertexBuffer.cc  b3Water.cc  b3Wood.cc  b3World.cc  base.pro  (+1 more)
src/brt3/: Makefile.in  bconv3.cc  benc3.cc  benc3.pro  bhc.cc  bhc.h  bimg3.cc  bimg3.pro  brt3.cc  brt3.pro  divx.cc  gif.cc  gif.h  gif_info.cc  gif_movie.cc  gif_trans.cc  makefile  rp.cc
src/check/: BlzDump.cc  makefile
src/cpuperf/: Makefile.in  bench.cc  makefile
src/divx/: Makefile.in  avilib.c  avilib.h  divx.cc  h264.cc  libxio.c  os.h  xio.h
src/image/: LibImage.dsp  LibImage.vcproj  Makefile.in  b3Encoder.cc  b3EncoderBuffer.cc  b3EncoderStream.cc  b3EncoderStream.h  b3Measure.cc  b3Measure.cpp  b3Sampler.cc  b3Tx.cc  b3TxAlgorithms.h  b3TxBlit.cc  b3TxDeskew.cc  b3TxEXR.cc  b3TxEasy.cc  b3TxExif.cc  b3TxGIF.cc  b3TxHist.cc  b3TxIFF.cc  b3TxIFF.h  b3TxIMG.cc  b3TxIMG.h  b3TxImage.cc  b3TxInclude.cc  b3TxInclude.h  b3TxJPG.cc  b3TxLoadImage.cc  b3TxLoadTIFF.cc  b3TxMirror.cc  b3TxPCX.cc  b3TxPNG.cc  b3TxPool.cc  b3TxSGI.h  b3TxSaveEXR.cc  b3TxSaveInfo.cc  b3TxSaveInfo.h  b3TxSaveJPEG.cc  b3TxSavePNG.cc  b3TxSavePS.cc  (+11 more)
src/raytrace/: LibRaytrace.dsp  LibRaytrace.vcproj  Makefile.in  b3AnimElement.cc  b3Animation.cc  b3Area.cc  b3BBox.cc  b3Base.cc  b3BaseTrans.cc  b3Box.cc  b3Bump.cc  b3BumpSampler.cc  b3CSGBox.cc  b3CSGCone.cc  b3CSGCylinder.cc  b3CSGEllipsoid.cc  b3CSGShape.cc  b3CSGSphere.cc  b3CSGTorus.cc  b3CameraProjection.cc  b3Condition.cc  b3Cone.cc  b3Cylinder.cc  b3Disk.cc  b3Ellipsoid.cc  b3Factory.cc  b3Init.cc  b3Intersect.cc  b3Light.cc  b3Material.cc  b3MaterialSampler.cc  b3Normal.cc  b3NormalDeriv.cc  b3PickInfo.cc  b3PrepareInfo.cc  b3RayRow.cc  b3Raytrace.cc  b3RaytraceExif.cc  b3RaytraceInclude.cc  b3RaytraceInclude.h  (+29 more)
src/smart_gui/: CJFlatComboBox.cpp  CJFlatComboBox.h  CoolControlsManager.cpp  CoolControlsManager.h  CoolMenu.cpp  CoolMenu.h  LibSmartGUI.dsp  LibSmartGUI.vcproj  MenuBar.h  (+3 more)
(+458 files in other folders)
